# rust-kernel

./: .gitignore  Cargo.toml  README.md  build.rs  x86_64-softfloat.json
.cargo/: config.toml
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  ap_protected.rs  apic_ptr.rs  framebuffer.rs  gdt.rs  interrupts.rs  kernel_acpi.rs  lib.rs  main.rs  memory.rs  serial.rs  timer.rs  vga_buffer.rs
kernel/src/allocator/: alloc_info.rs  fixed_size_block.rs  page_allocator.rs
kernel/src/init/: acpi.rs  apic.rs  graphics.rs  hpet.rs  memory_init.rs  mod.rs  multicore.rs
kernel/src/smp/: ap_protected.rs  ap_trampoline.asm  ap_trampoline.s  mod.rs  trampoline.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  heap_deallocation.rs  should_panic.rs  stack_overflow.rs
src/: allocator.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: alloc_info.rs  fixed_size_block.rs  page_allocator.rs
src/allocators/: arena.rs  bin.rs  chunk.rs  metadata.rs  mod.rs  run.rs
src/task/: executor.rs  keyboard.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  heap_deallocation.rs  should_panic.rs  stack_overflow.rs
