[package]
name = "rust-os-build"
edition = "2024"
build = "build.rs"

[workspace]
members = ["kernel"]

[build-dependencies]
bootloader = "0.11.9"
# This points to your kernel artifact from the sub-crate:
rust-os = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
cc = "1.2.15"


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
spin = "0.10.0"
